# MonitorCore

./: .gitignore  BUILD.md  LICENSE  QUICKSTART.md  README.md
cpp/: CMakeLists.txt  build.bat
cpp/include/: system_monitor.h
cpp/src/: cpu_monitor.cpp  cpu_monitor.h  disk_monitor.cpp  disk_monitor.h  gpu_monitor.cpp  gpu_monitor.h  main.cpp  memory_monitor.cpp  memory_monitor.h  network_monitor.cpp  network_monitor.h  process_monitor.cpp  process_monitor.h  system_monitor.cpp
python/: requirements.txt  run.bat
python/api/: server.py
python/cli/: monitor_cli.py
web/: index.html
web/css/: styles.css
web/js/: app.js
